cfn_benchmark/cfn_templates/walkerpr__aws_kubernetes_infrastructure_with_central_services/common/files/cloudFormationTemplates/CentralServices/childTemplates/sampleCentralServicesNLB.yaml
Parameters:
  pEnvironment:
    Type: String
    Description: Development? Test Upstream? Prod Upstream?
    AllowedValues:
      - dev
      - upprod
      - uptest
  pSampleEnv:
    Type: String
    Description: Production? Test?
    AllowedValues:
      - prod
      - test
  pDomain:
    Description: The domain representing the environment (ex. sample.sample.dev or sample.sample.dev).
    Type: String
    AllowedValues:
      - sample
      - sample
Conditions:
  Upstream: !Or
    - !Equals
      - upprod
      - !Ref pEnvironment
    - !Equals
      - uptest
      - !Ref pEnvironment
Resources:
  UPAppELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.0.0.0/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.128.255.255/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.136.0/22"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.128/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.194.128/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.0/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.193.0/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.77.0/24"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.30.16.0/20"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.5.39.128/25"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
  UPAppElb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub  sample-${pEnvironment}-${pSampleEnv}-upstream-elb
      Scheme: internal
      IpAddressType: ipv4
      Subnets:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
      Type: network
      SecurityGroups:
        - !Ref UPAppELBSecurityGroup
  UPAppELBServices:
    Type: AWS::EC2::VPCEndpointService
    Properties:
      AcceptanceRequired: false
      NetworkLoadBalancerArns:
        - !Ref UPAppElb
      SupportedIpAddressTypes:
        - ipv4
      Tags:
        - Key: "Name"
          Value: "upstream-app"
  UPAppELBServicePermissions:
    Type: AWS::EC2::VPCEndpointServicePermissions
    DeletionPolicy: Retain
    Properties:
      AllowedPrincipals:
        - arn:aws-us-gov:iam::<PLACEHOLDER>:root
      ServiceId: !GetAtt UPAppELBServices.ServiceId
  UPAppELBRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: !Sub "app.0.upstream.elb.${pEnvironment}.${pDomain}.dev"
          Type: CNAME
          AliasTarget:
            HostedZoneId: !GetAtt UPAppElb.CanonicalHostedZoneID
            DNSName: !GetAtt UPAppElb.DNSName
  UPAppELBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: UPAppELBTargetGroup
      LoadBalancerArn:
        Ref: UPAppElb
      Port: 443
      Protocol: TCP
  UPAppELBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: "/readyz"
      HealthCheckPort: 443
      HealthCheckProtocol: HTTPS
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Port: 443
      Protocol: TCP
      TargetType: ip
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60
  UPAppELBLoadBalancerNameParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/UPAppELBloadbalancer/name"
      Type: String
      Value: !GetAtt UPAppElb.LoadBalancerFullName
      Description: SSM Parameter for UPAppELBLoadBalancerName
  UPAppELBLoadBalancerDNSNameParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/UPAppELBloadbalancer/dnsname"
      Type: String
      Value: !Sub "upstream-elb.${pEnvironment}.${pDomain}.dev"
      Description: SSM Parameter for UPAppELBLoadBalancer
  UPAppELBTargetGroupArnParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/lambda/sample-central-services/elbUPAPPelbtargetgroup/arn"
      Type: String
      Value: !Ref UPAppELBTargetGroup
      Description: SSM Parameter for UPAppELBTargetGroup
  UPSECELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.0.0.0/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.128.255.255/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.136.0/22"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.128/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.194.128/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.0/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.193.0/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.77.0/24"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.30.16.0/20"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.5.39.128/25"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
  UPSECElb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub  sample-${pEnvironment}-${pSampleEnv}-upstream-sec-elb
      Scheme: internal
      IpAddressType: ipv4
      Subnets:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
      Type: network
      SecurityGroups:
        - !Ref UPSECELBSecurityGroup
  UPSECELBServices:
    Type: AWS::EC2::VPCEndpointService
    Properties:
      AcceptanceRequired: false
      NetworkLoadBalancerArns:
        - !Ref UPSECElb
      SupportedIpAddressTypes:
        - ipv4
      Tags:
        - Key: "Name"
          Value: "upstream-sec"
  UPSECELBServicePermissions:
    Type: AWS::EC2::VPCEndpointServicePermissions
    DeletionPolicy: Retain
    Properties:
      AllowedPrincipals:
        - arn:aws-us-gov:iam::<PLACEHOLDER>:root
      ServiceId: !GetAtt UPSECELBServices.ServiceId
  UPSECELBRecord:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: !Sub "sec.0.upstream.elb.${pEnvironment}.${pDomain}.dev"
          Type: CNAME
          AliasTarget:
            HostedZoneId: !GetAtt UPSECElb.CanonicalHostedZoneID
            DNSName: !GetAtt UPSECElb.DNSName
  UPSECELBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: UPSECELBTargetGroup
      LoadBalancerArn:
        Ref: UPSECElb
      Port: 443
      Protocol: TCP
  UPSECELBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: "/readyz"
      HealthCheckPort: 443
      HealthCheckProtocol: HTTPS
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Port: 443
      Protocol: TCP
      TargetType: ip
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60
  UPSECELBLoadBalancerNameParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/UPSECELBloadbalancer/name"
      Type: String
      Value: !GetAtt UPSECElb.LoadBalancerFullName
      Description: SSM Parameter for UPSECELBLoadBalancerName
  UPSECELBLoadBalancerDNSNameParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/UPSECELBloadbalancer/dnsname"
      Type: String
      Value: !Sub "upstream-elb.${pEnvironment}.${pDomain}.dev"
      Description: SSM Parameter for UPSECELBLoadBalancer
  UPSECELBTargetGroupArnParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/lambda/sample-central-services/elb/UPSECelbtargetgroup/arn"
      Type: String
      Value: !Ref UPSECELBTargetGroup
      Description: SSM Parameter for UPSECELBTargetGroup
  DOWNSECELBSecurityGroup:
    Condition: Upstream
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.0.0.0/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.128.255.255/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.136.0/22"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.128/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.194.128/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.0/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.193.0/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.77.0/24"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.30.16.0/20"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.5.39.128/25"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
  DOWNSECElb:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub  sample-${pEnvironment}-${pSampleEnv}-downstream-sec-elb
      Scheme: internal
      IpAddressType: ipv4
      Subnets:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
      Type: network
      SecurityGroups:
        - !Ref DOWNSECELBSecurityGroup
  DOWNSECELBServices:
    Condition: Upstream
    Type: AWS::EC2::VPCEndpointService
    Properties:
      AcceptanceRequired: false
      NetworkLoadBalancerArns:
        - !Ref DOWNSECElb
      SupportedIpAddressTypes:
        - ipv4
      Tags:
        - Key: "Name"
          Value: "downstream-sec"
  DOWNSECELBServicePermissions:
    Condition: Upstream
    Type: AWS::EC2::VPCEndpointServicePermissions
    DeletionPolicy: Retain
    Properties:
      AllowedPrincipals:
        - arn:aws-us-gov:iam::<PLACEHOLDER>:root
      ServiceId: !GetAtt DOWNSECELBServices.ServiceId
  DOWNSECELBRecord:
    Condition: Upstream
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: !Sub "sec.0.downstream.elb.${pEnvironment}.${pDomain}.dev"
          Type: CNAME
          AliasTarget:
            HostedZoneId: !GetAtt DOWNSECElb.CanonicalHostedZoneID
            DNSName: !GetAtt DOWNSECElb.DNSName
  DOWNSECELBListener:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: DOWNSECELBTargetGroup
      LoadBalancerArn:
        Ref: DOWNSECElb
      Port: 443
      Protocol: TCP
  DOWNSECELBTargetGroup:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: "/readyz"
      HealthCheckPort: 443
      HealthCheckProtocol: HTTPS
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Port: 443
      Protocol: TCP
      TargetType: ip
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60
  DOWNSECELBLoadBalancerNameParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/DOWNSECELBloadbalancer/name"
      Type: String
      Value: !GetAtt DOWNSECElb.LoadBalancerFullName
      Description: SSM Parameter for DOWNSECELBLoadBalancerName
  DOWNSECELBLoadBalancerDNSNameParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/DOWNSECELBloadbalancer/dnsname"
      Type: String
      Value: !Sub "upstream-elb.${pEnvironment}.${pDomain}.dev"
      Description: SSM Parameter for DOWNSECELBLoadBalancer
  DOWNSECELBTargetGroupArnParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/lambda/sample-central-services/elb/DOWNSECelbtargetgroup/arn"
      Type: String
      Value: !Ref DOWNSECELBTargetGroup
      Description: SSM Parameter for DOWNSECELBTargetGroup
  DOWNVSTELBSecurityGroup:
    Condition: Upstream
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.0.0.0/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.128.255.255/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.136.0/22"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.128/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.194.128/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.0/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.193.0/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.77.0/24"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.30.16.0/20"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.5.39.128/25"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
  DOWNVSTElb:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub  sample-${pEnvironment}-${pSampleEnv}-downstream-vst-elb
      Scheme: internal
      IpAddressType: ipv4
      Subnets:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
      Type: network
      SecurityGroups:
        - !Ref DOWNVSTELBSecurityGroup
  DOWNVSTELBServices:
    Condition: Upstream
    Type: AWS::EC2::VPCEndpointService
    Properties:
      AcceptanceRequired: false
      NetworkLoadBalancerArns:
        - !Ref DOWNVSTElb
      SupportedIpAddressTypes:
        - ipv4
      Tags:
        - Key: "Name"
          Value: "downstream-vst"
  DOWNVSTELBServicePermissions:
    Condition: Upstream
    Type: AWS::EC2::VPCEndpointServicePermissions
    DeletionPolicy: Retain
    Properties:
      AllowedPrincipals:
        - arn:aws-us-gov:iam::<PLACEHOLDER>:root
      ServiceId: !GetAtt DOWNVSTELBServices.ServiceId
  DOWNVSTELBRecord:
    Condition: Upstream
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: !Sub "viewer.0.downstream.elb.${pEnvironment}.${pDomain}.dev"
          Type: CNAME
          AliasTarget:
            HostedZoneId: !GetAtt DOWNVSTElb.CanonicalHostedZoneID
            DNSName: !GetAtt DOWNVSTElb.DNSName
  DOWNVSTELBListener:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: DOWNVSTELBTargetGroup
      LoadBalancerArn:
        Ref: DOWNVSTElb
      Port: 443
      Protocol: TCP
  DOWNVSTELBTargetGroup:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: "/readyz"
      HealthCheckPort: 443
      HealthCheckProtocol: HTTPS
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Port: 443
      Protocol: TCP
      TargetType: ip
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60
  DOWNVSTELBLoadBalancerNameParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/DOWNVSTELBloadbalancer/name"
      Type: String
      Value: !GetAtt DOWNVSTElb.LoadBalancerFullName
      Description: SSM Parameter for DOWNVSTELBLoadBalancerName
  DOWNVSTELBLoadBalancerDNSNameParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/DOWNVSTELBloadbalancer/dnsname"
      Type: String
      Value: !Sub "upstream-elb.${pEnvironment}.${pDomain}.dev"
      Description: SSM Parameter for DOWNVSTELBLoadBalancer
  DOWNVSTELBTargetGroupArnParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/lambda/sample-central-services/elb/DOWNVSTelbtargetgroup/arn"
      Type: String
      Value: !Ref DOWNVSTELBTargetGroup
      Description: SSM Parameter for DOWNVSTELBTargetGroup
  DOWNAPPELBSecurityGroup:
    Condition: Upstream
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.0.0.0/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.128.255.255/9"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.136.0/22"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.128/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.194.128/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.242.0/26"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.193.0/25"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "128.34.77.0/24"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.30.16.0/20"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.5.39.128/25"
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
  DOWNAPPElb:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub  sample-${pEnvironment}-${pSampleEnv}-downstream-app-elb
      Scheme: internal
      IpAddressType: ipv4
      Subnets:
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/c/id}}"
        - !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-central-services-subnet/d/id}}"
      Type: network
      SecurityGroups:
        - !Ref DOWNAPPELBSecurityGroup
  DOWNAPPELBServices:
    Condition: Upstream
    Type: AWS::EC2::VPCEndpointService
    Properties:
      AcceptanceRequired: false
      NetworkLoadBalancerArns:
        - !Ref DOWNAPPElb
      SupportedIpAddressTypes:
        - ipv4
      Tags:
        - Key: "Name"
          Value: "downstream-app"
  DOWNAPPELBServicePermissions:
    Condition: Upstream
    Type: AWS::EC2::VPCEndpointServicePermissions
    DeletionPolicy: Retain
    Properties:
      AllowedPrincipals:
        - arn:aws-us-gov:iam::<PLACEHOLDER>:root
      ServiceId: !GetAtt DOWNAPPELBServices.ServiceId
  DOWNAPPELBRecord:
    Condition: Upstream
    Type: AWS::Route53::RecordSetGroup
    Properties:
      Comment: Alias record for the API server
      HostedZoneId: !Sub "{{resolve:ssm:/sample/route53/${pEnvironment}-dev/id}}"
      RecordSets:
        - Name: !Sub "app.0.downstream.elb.${pEnvironment}.${pDomain}.dev"
          Type: CNAME
          AliasTarget:
            HostedZoneId: !GetAtt DOWNAPPElb.CanonicalHostedZoneID
            DNSName: !GetAtt DOWNAPPElb.DNSName
  DOWNAPPELBListener:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn:
            Ref: DOWNAPPELBTargetGroup
      LoadBalancerArn:
        Ref: DOWNAPPElb
      Port: 443
      Protocol: TCP
  DOWNAPPELBTargetGroup:
    Condition: Upstream
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: "/readyz"
      HealthCheckPort: 443
      HealthCheckProtocol: HTTPS
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Port: 443
      Protocol: TCP
      TargetType: ip
      VpcId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/id}}"
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 60
  DOWNAPPELBLoadBalancerNameParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/DOWNAPPELBloadbalancer/name"
      Type: String
      Value: !GetAtt DOWNAPPElb.LoadBalancerFullName
      Description: SSM Parameter for DOWNAPPELBLoadBalancerName
  DOWNAPPELBLoadBalancerDNSNameParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/elb/sample-central-services/elb/DOWNAPPELBloadbalancer/dnsname"
      Type: String
      Value: !Sub "upstream-elb.${pEnvironment}.${pDomain}.dev"
      Description: SSM Parameter for DOWNAPPELBLoadBalancer
  DOWNAPPELBTargetGroupArnParameter:
    Condition: Upstream
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/lambda/sample-central-services/elb/DOWNAPPelbtargetgroup/arn"
      Type: String
      Value: !Ref DOWNAPPELBTargetGroup
      Description: SSM Parameter for DOWNAPPELBTargetGroup
  RegisterTargetLambdaIamRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub sample-${pEnvironment}-${pSampleEnv}-upstream-elb-lambda-role
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "lambda.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
      ManagedPolicyArns:
        - !Sub arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: !Sub sample-${pEnvironment}-${pSampleEnv}-upstream-elb-lambda-policy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  [
                    "elasticloadbalancing:RegisterTargets",
                    "elasticloadbalancing:DeregisterTargets",
                  ]
                Resource: "*"
              - Effect: "Allow"
                Action:
                  [
                    "elasticloadbalancing:RegisterTargets",
                    "elasticloadbalancing:DeregisterTargets",
                  ]
                Resource: "*"
  RegisterNlbIpTargets:
    Type: AWS::Lambda::Function
    Properties:
      Handler: "index.handler"
      Role: !GetAtt
        - "RegisterTargetLambdaIamRole"
        - "Arn"
      Code:
        ZipFile: |
          import json
          import boto3
          import cfnresponse
          def handler(event, context):
            elb = boto3.client('elbv2')
            if event['RequestType'] == 'Delete':
              elb.deregister_targets(TargetGroupArn=event['ResourceProperties']['TargetArn'],Targets=[{'Id': event['ResourceProperties']['TargetIp']}])
            elif event['RequestType'] == 'Create':
              elb.register_targets(TargetGroupArn=event['ResourceProperties']['TargetArn'],Targets=[{'Id': event['ResourceProperties']['TargetIp']}])
            elif event['RequestType'] == 'Update':
              elb.register_targets(TargetGroupArn=event['ResourceProperties']['TargetArn'],Targets=[{'Id': event['ResourceProperties']['TargetIp']}])
            responseData = {}
            cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData, event['ResourceProperties']['TargetArn']+event['ResourceProperties']['TargetIp'])
      Runtime: "python3.11"
      Timeout: 120
  RegisterNlbIpTargetsLambdaParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/lambda/sample-central-services/elb/registernlbiptargetslambda/arn"
      Type: String
      Value: !GetAtt RegisterNlbIpTargets.Arn
      Description: SSM Parameter for ApiServerDnsName
